InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProgramEnrollment__c/vlocity_ins__ProgramEnrollment__c.object-meta.xml
<CustomObject>
    <description>The Program Enrollment is used to track the participation of an individual or household in a public health insurance program.</description>
    <label>Program Enrollment</label>
    <nameField>
        <label>Enrollment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>