InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProgramEnrollment__c/fields/vlocity_ins__CurrentScheduledRedeterminationDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CurrentScheduledRedeterminationDate__c</fullName>
    <label>Current Scheduled Redetermination Date</label>
    <type>Date</type>
</CustomField>