InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProgramEnrollment__c/fields/vlocity_ins__DaysSinceApplicationFiled__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DaysSinceApplicationFiled__c</fullName>
    <formula>TODAY() -  DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Application Filed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>