InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProgramEnrollment__c/fields/vlocity_ins__DaysSinceNoticeOfRedetermination__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DaysSinceNoticeOfRedetermination__c</fullName>
    <formula>TODAY() -  vlocity_ins__LastNoticeOfRedeterminationDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since Notice of Redetermination</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>