InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProgramEnrollment__c/fields/vlocity_ins__DaysUntilCurrentRedetermination__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DaysUntilCurrentRedetermination__c</fullName>
    <formula>IF(vlocity_ins__CurrentScheduledRedeterminationDate__c &gt; TODAY(), vlocity_ins__CurrentScheduledRedeterminationDate__c -  TODAY(), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days until Scheduled Redetermination</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>