InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProgramEnrollment__c/fields/vlocity_ins__DeterminationCycle__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DeterminationCycle__c</fullName>
    <label>Determination Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12 months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
            <value>
                <fullName>3 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>