InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProgramEnrollment__c/fields/vlocity_ins__NoticesOfRedetermination__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__NoticesOfRedetermination__c</fullName>
    <label>Notices of Redetermination</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>