InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProgramEnrollment__c/fields/vlocity_ins__NumberOfRefusals__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__NumberOfRefusals__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Refusals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>