InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProgramEnrollment__c/fields/vlocity_ins__PrimaryApplicantName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PrimaryApplicantName__c</fullName>
    <formula>vlocity_ins__PrimaryContactId__r.vlocity_ins__PartyId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Applicant</label>
    <type>Text</type>
</CustomField>