InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProgramEnrollment__c/fields/vlocity_ins__PrimaryContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PrimaryContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Enrollment Primary Contact</relationshipLabel>
    <relationshipName>ProgramEnrollmentPrimaryContacts</relationshipName>
    <type>Lookup</type>
</CustomField>