InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProgramEnrollment__c/fields/vlocity_ins__ProgramType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProgramType__c</fullName>
    <formula>TEXT(vlocity_ins__ProgramId__r.vlocity_ins__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Type</label>
    <type>Text</type>
</CustomField>