InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProgramEnrollment__c/validationRules/vlocity_ins__WaitlistRemovedReasonNotNull.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ins__WaitlistRemovedReasonNotNull</fullName>
    <active>true</active>
    <errorConditionFormula>IF( vlocity_ins__IsRemoved__c == true &amp;&amp; ISBLANK( vlocity_ins__ReasonForRemoval__c ),  true,  false)</errorConditionFormula>
    <errorDisplayField>vlocity_ins__ReasonForRemoval__c</errorDisplayField>
    <errorMessage>Please select reason/s for removal</errorMessage>
</ValidationRule>